--- a/src/main/resources/assets/world_tools/lang/de_de.json
+++ b/src/main/resources/assets/world_tools/lang/de_de.json
@@ -1,4 +1,5 @@
 {
   "key.categories.world_tools": "WorldTools",
-  "key.world_tools.open_config": "Konfiguration öffnen"
+  "key.world_tools.open_config": "Konfiguration öffnen",
+  "gui.worldtools.download": "Herunterladen"
 }
