Big translatable rewrite. Full language support

--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -1,5 +1,32 @@
 {
-  "key.categories.worldtools": "WorldTools",
+  "capture.and": "und",
+  "capture.chunks": "Chunks",
+  "capture.click_to_open": "Klicke zum Öffnen",
+  "capture.containers": "Kontainer",
+  "capture.entities": "Entitäten",
+  "capture.in_dimensions": "in Dimension",
+  "capture.in_directory": "im Verzeichnis",
+  "capture.nothing_saved_yet": "Noch nichts gespeichert",
+  "capture.players": "Spieler",
+  "capture.saved": "Speicherte",
+  "capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert.",
+  "capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert.",
+  "capture.saved.metadata": "Metadaten gespeichert.",
+  "capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert.",
+  "capture.saved.statistics": "Statistiken gespeichert.",
+  "capture.took": "dauerte %s",
+  "error.failed_to_create_session": "Fehler beim Erstellen der Sitzung für \"%s\"!",
+  "error.world_name_too_long": "Weltname \"%s\" darf nicht länger als %d Zeichen sein!",
+  "gui.cancel": "Abbrechen",
+  "gui.finish_download": "Aufzeichnung von %s speichern",
+  "gui.start_download": "Herunterladen",
+  "gui.title": "%s Verwaltung",
+  "gui.world_name_placeholder": "Weltname eingeben... (Default: %s)",
+  "gui.worldtools.download": "Herunterladen",
+  "info.started_capture": "Aufnahme von %s gestartet...",
+  "info.stopping_capture": "Aufnahme von %s wird gestoppt...",
+  "key.categories.worldtools": "WeltWerkzeuge",
   "key.worldtools.open_config": "Konfiguration öffnen",
-  "gui.worldtools.download": "Herunterladen"
+  "key.worldtools.toggle_capture": "Aufnahme starten/stoppen",
+  "worldtools": "WeltWerkzeuge"
 }
