--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -1,5 +1,32 @@
 {
+  "capture.and": "and",
+  "capture.chunks": "chunks",
+  "capture.click_to_open": "click to open",
+  "capture.containers": "containers",
+  "capture.entities": "entities",
+  "capture.in_dimensions": "in dimensions",
+  "capture.in_directory": "to saves directory",
+  "capture.nothing_saved_yet": "Nothing saved yet",
+  "capture.players": "players",
+  "capture.saved": "Saved",
+  "capture.saved.chunks": "Saved chunk at %s in dimension %s",
+  "capture.saved.entities": "Saved entities %s in chunk %s in dimension %s",
+  "capture.saved.metadata": "Saved metadata",
+  "capture.saved.player": "Saved player %s at %s in dimension %s",
+  "capture.saved.statistics": "Saved statistics",
+  "capture.took": "took %s",
+  "error.failed_to_create_session": "Failed to create session for \"%s\"!",
+  "error.world_name_too_long": "World name \"%s\" is too long! (max %d characters)",
+  "gui.cancel": "Cancel",
+  "gui.finish_download": "Save capture of %s",
+  "gui.start_download": "Start download",
+  "gui.title": "%s Manager",
+  "gui.world_name_placeholder": "Enter world name... (default: %s)",
+  "gui.worldtools.download": "Download",
+  "info.started_capture": "Started capturing %s...",
+  "info.stopping_capture": "Stopping capture %s...",
   "key.categories.worldtools": "WorldTools",
   "key.worldtools.open_config": "Open configuration",
-  "gui.worldtools.download": "Download"
+  "key.worldtools.toggle_capture": "Quick download",
+  "worldtools": "WorldTools"
 }
