Exhaustive settings and organized translations

--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -1,32 +1,65 @@
 {
-  "capture.and": "und",
-  "capture.chunks": "Chunks",
-  "capture.click_to_open": "Klicke zum Öffnen",
-  "capture.containers": "Kontainer",
-  "capture.entities": "Entitäten",
-  "capture.in_dimensions": "in Dimension",
-  "capture.in_directory": "im Verzeichnis",
-  "capture.nothing_saved_yet": "Noch nichts gespeichert",
-  "capture.players": "Spieler",
-  "capture.saved": "Gespeichert:",
-  "capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert.",
-  "capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert.",
-  "capture.saved.metadata": "Metadaten gespeichert.",
-  "capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert.",
-  "capture.saved.statistics": "Statistiken gespeichert.",
-  "capture.took": "dauerte %s",
-  "error.failed_to_create_session": "Fehler beim Erstellen der Sitzung für \"%s\"!",
-  "error.world_name_too_long": "Weltname \"%s\" darf nicht länger als %d Zeichen sein!",
-  "gui.cancel": "Abbrechen",
-  "gui.finish_download": "Aufzeichnung von %s speichern",
-  "gui.start_download": "Herunterladen",
-  "gui.title": "%s Verwaltung",
-  "gui.world_name_placeholder": "Weltname eingeben... (Default: %s)",
-  "gui.worldtools.download": "Herunterladen",
-  "info.started_capture": "Aufnahme von %s gestartet...",
-  "info.stopping_capture": "Aufnahme von %s wird gestoppt...",
-  "key.categories.worldtools": "WeltWerkzeuge",
-  "key.worldtools.open_config": "Konfiguration öffnen",
-  "key.worldtools.toggle_capture": "Aufnahme starten/stoppen",
-  "worldtools": "WeltWerkzeuge"
+  "text.autoconfig.worldtools.option.advanced": "Erweitert",
+  "text.autoconfig.worldtools.option.advanced.bossBarTimeout": "Boss Balken Anzeigedauer (ms)",
+  "text.autoconfig.worldtools.option.advanced.renderNotYetCachedContainers": "Rendere nicht gecachte Kontainer",
+  "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Nachrichten anzeigen",
+  "text.autoconfig.worldtools.option.advanced.showToasts": "Info Toasts anzeigen",
+  "text.autoconfig.worldtools.option.capture": "Aufnahme",
+  "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
+  "text.autoconfig.worldtools.option.capture.entities": "Entitäten",
+  "text.autoconfig.worldtools.option.capture.metadata": "Metadaten",
+  "text.autoconfig.worldtools.option.capture.players": "Spieler",
+  "text.autoconfig.worldtools.option.capture.statistics": "Statistiken",
+  "text.autoconfig.worldtools.option.entity": "Entität",
+  "text.autoconfig.worldtools.option.entity.invulnerable": "Unverwundbar",
+  "text.autoconfig.worldtools.option.entity.modifyNBT": "NBT Modifizieren",
+  "text.autoconfig.worldtools.option.entity.noAI": "Keine AI",
+  "text.autoconfig.worldtools.option.entity.noGravity": "Keine Gravitation",
+  "text.autoconfig.worldtools.option.entity.silent": "Stummen",
+  "text.autoconfig.worldtools.option.world": "Welt",
+  "text.autoconfig.worldtools.option.world.doDaylightCycle": "Tageszyklus",
+  "text.autoconfig.worldtools.option.world.doFireTick": "Feuer Ausbreitung",
+  "text.autoconfig.worldtools.option.world.doMobGriefing": "Mob Griefing",
+  "text.autoconfig.worldtools.option.world.doMobSpawning": "Mob Spawning",
+  "text.autoconfig.worldtools.option.world.doPatrolSpawning": "Patrouillen Spawning",
+  "text.autoconfig.worldtools.option.world.doTraderSpawning": "Händler Spawning",
+  "text.autoconfig.worldtools.option.world.doVinesSpread": "Lianen Ausbreitung",
+  "text.autoconfig.worldtools.option.world.doWardenSpawning": "Wächter Spawning",
+  "text.autoconfig.worldtools.option.world.doWeatherCycle": "Wetterzyklus",
+  "text.autoconfig.worldtools.option.world.keepInventory": "Inventar behalten",
+  "text.autoconfig.worldtools.option.world.modifyGameRules": "Spielregeln modifizieren",
+  "text.autoconfig.worldtools.title": "WorldTools Konfiguration",
+  "worldtools.capture.and": "und",
+  "worldtools.capture.chunks": "Chunks",
+  "worldtools.capture.click_to_open": "Klicke zum Öffnen",
+  "worldtools.capture.containers": "Kontainer",
+  "worldtools.capture.entities": "Entitäten",
+  "worldtools.capture.in_dimensions": "in Dimension",
+  "worldtools.capture.in_directory": "im Verzeichnis",
+  "worldtools.capture.nothing_saved_yet": "Noch nichts gespeichert",
+  "worldtools.capture.players": "Spieler",
+  "worldtools.capture.saved": "Gespeichert:",
+  "worldtools.capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert.",
+  "worldtools.capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert.",
+  "worldtools.capture.saved.metadata": "Metadaten gespeichert.",
+  "worldtools.capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert.",
+  "worldtools.capture.saved.statistics": "Statistiken gespeichert.",
+  "worldtools.capture.took": "dauerte %s",
+  "worldtools.gui.browser.title": "WorldTools Browser",
+  "worldtools.gui.escape.button.finish_download": "Aufzeichnung von %s speichern",
+  "worldtools.gui.manager.button.cancel": "Abbrechen",
+  "worldtools.gui.manager.button.config": "Konfiguration",
+  "worldtools.gui.manager.button.start_download": "Herunterladen",
+  "worldtools.gui.manager.title": "WorldTools Verwaltung",
+  "worldtools.gui.manager.world_name_placeholder": "Weltname eingeben... (Default: %s)",
+  "worldtools.key.categories": "WeltWerkzeuge",
+  "worldtools.key.open_config": "Konfiguration öffnen",
+  "worldtools.key.toggle_capture": "Aufnahme starten/stoppen",
+  "worldtools.log.error.already_capturing": "A capture for %s is already running!",
+  "worldtools.log.error.failed_to_create_session": "Fehler beim Erstellen der Sitzung für \"%s\"! (Error: %s)",
+  "worldtools.log.error.failed_to_save_level": "Failed to save level.dat for \"%s\"! (error: %s)",
+  "worldtools.log.error.not_capturing": "No capture is running yet!",
+  "worldtools.log.error.world_name_too_long": "Weltname \"%s\" darf nicht länger als %d Zeichen sein!",
+  "worldtools.log.info.started_capture": "Aufnahme von %s gestartet...",
+  "worldtools.log.info.stopping_capture": "Aufnahme von %s wird gestoppt..."
 }
