--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -1,42 +1,65 @@
 {
-  "capture.and": "and",
-  "capture.chunks": "chunks",
-  "capture.click_to_open": "click to open",
-  "capture.containers": "containers",
-  "capture.entities": "entities",
-  "capture.in_dimensions": "in dimensions",
-  "capture.in_directory": "to saves directory",
-  "capture.nothing_saved_yet": "Nothing saved yet",
-  "capture.players": "players",
-  "capture.saved": "Saved",
-  "capture.saved.chunks": "Saved chunk at %s in dimension %s",
-  "capture.saved.entities": "Saved entities %s in chunk %s in dimension %s",
-  "capture.saved.metadata": "Saved metadata",
-  "capture.saved.player": "Saved player %s at %s in dimension %s",
-  "capture.saved.statistics": "Saved statistics",
-  "capture.took": "took %s",
-  "error.failed_to_create_session": "Failed to create session for \"%s\"!",
-  "error.world_name_too_long": "World name \"%s\" is too long! (max %d characters)",
-  "gui.cancel": "Cancel",
-  "gui.finish_download": "Save capture of %s",
-  "gui.start_download": "Start download",
-  "gui.title": "%s Manager",
-  "gui.world_name_placeholder": "Enter world name... (default: %s)",
-  "gui.worldtools.download": "Download",
-  "info.started_capture": "Started capturing %s...",
-  "info.stopping_capture": "Stopping capture %s...",
-  "key.categories.worldtools": "WorldTools",
-  "key.worldtools.open_config": "Open configuration",
-  "key.worldtools.toggle_capture": "Quick download",
-  "worldtools": "WorldTools",
-  "gui.config": "Config",
+  "text.autoconfig.worldtools.option.advanced": "Advanced",
+  "text.autoconfig.worldtools.option.advanced.bossBarTimeout": "Boss Bar Timeout",
+  "text.autoconfig.worldtools.option.advanced.renderNotYetCachedContainers": "Render Not Yet Cached Containers",
+  "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Messages",
+  "text.autoconfig.worldtools.option.advanced.showToasts": "Display Toasts",
+  "text.autoconfig.worldtools.option.capture": "Capture",
+  "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
+  "text.autoconfig.worldtools.option.capture.entities": "Entities",
+  "text.autoconfig.worldtools.option.capture.metadata": "Metadata",
+  "text.autoconfig.worldtools.option.capture.players": "Players",
+  "text.autoconfig.worldtools.option.capture.statistics": "Statistics",
+  "text.autoconfig.worldtools.option.entity": "Entity",
+  "text.autoconfig.worldtools.option.entity.invulnerable": "Invulnerable",
+  "text.autoconfig.worldtools.option.entity.modifyNBT": "Modify NBT",
+  "text.autoconfig.worldtools.option.entity.noAI": "No AI",
+  "text.autoconfig.worldtools.option.entity.noGravity": "No Gravity",
+  "text.autoconfig.worldtools.option.entity.silent": "Silent",
+  "text.autoconfig.worldtools.option.world": "World",
+  "text.autoconfig.worldtools.option.world.doDaylightCycle": "Daylight Cycle",
+  "text.autoconfig.worldtools.option.world.doFireTick": "Fire Spread",
+  "text.autoconfig.worldtools.option.world.doMobGriefing": "Mob Griefing",
+  "text.autoconfig.worldtools.option.world.doMobSpawning": "Mob Spawning",
+  "text.autoconfig.worldtools.option.world.doPatrolSpawning": "Patrol Spawning",
+  "text.autoconfig.worldtools.option.world.doTraderSpawning": "Trader Spawning",
+  "text.autoconfig.worldtools.option.world.doVinesSpread": "Vines Spread",
+  "text.autoconfig.worldtools.option.world.doWardenSpawning": "Warden Spawning",
+  "text.autoconfig.worldtools.option.world.doWeatherCycle": "Weather Cycle",
+  "text.autoconfig.worldtools.option.world.keepInventory": "Keep Inventory",
+  "text.autoconfig.worldtools.option.world.modifyGameRules": "Modify Game Rules",
   "text.autoconfig.worldtools.title": "WorldTools Config",
-  "text.autoconfig.worldtools.option.renderUncapturedStoragesOutline": "Render Uncaptured Storages Outline",
-  "text.autoconfig.worldtools.option.bossBarTimeout": "Boss Bar Timeout",
-  "text.autoconfig.worldtools.option.showToasts": "Toasts",
-  "text.autoconfig.worldtools.option.showChatMessages": "Info Chat Messages",
-  "text.autoconfig.worldtools.option.showActionBarMessages": "Action Bar Messages",
-  "text.autoconfig.worldtools.option.customWorldGenerator": "Custom World Generator",
-  "text.autoconfig.worldtools.option.freezeWorld": "Freeze World",
-  "text.autoconfig.worldtools.option.freezeEntities": "Freeze Entities"
+  "worldtools.capture.and": "and",
+  "worldtools.capture.chunks": "chunks",
+  "worldtools.capture.click_to_open": "click to open",
+  "worldtools.capture.containers": "containers",
+  "worldtools.capture.entities": "entities",
+  "worldtools.capture.in_dimensions": "in dimension",
+  "worldtools.capture.in_directory": "to saves directory",
+  "worldtools.capture.nothing_saved_yet": "Nothing saved yet",
+  "worldtools.capture.players": "players",
+  "worldtools.capture.saved": "Saved",
+  "worldtools.capture.saved.chunks": "Saved chunk at %s in dimension %s",
+  "worldtools.capture.saved.entities": "Saved entities %s in chunk %s in dimension %s",
+  "worldtools.capture.saved.metadata": "Saved metadata",
+  "worldtools.capture.saved.player": "Saved player %s at %s in dimension %s",
+  "worldtools.capture.saved.statistics": "Saved statistics",
+  "worldtools.capture.took": "took %s",
+  "worldtools.gui.browser.title": "WorldTools Browser",
+  "worldtools.gui.escape.button.finish_download": "Save capture of %s",
+  "worldtools.gui.manager.button.cancel": "Cancel",
+  "worldtools.gui.manager.button.config": "Config",
+  "worldtools.gui.manager.button.start_download": "Start download",
+  "worldtools.gui.manager.title": "WorldTools Manager",
+  "worldtools.gui.manager.world_name_placeholder": "Enter world name... (default: %s)",
+  "worldtools.key.categories": "WorldTools",
+  "worldtools.key.open_config": "Open configuration",
+  "worldtools.key.toggle_capture": "Quick download",
+  "worldtools.log.error.already_capturing": "A capture for %s is already running!",
+  "worldtools.log.error.failed_to_create_session": "Failed to create session for \"%s\"! (error: %s)",
+  "worldtools.log.error.failed_to_save_level": "Failed to save level.dat for \"%s\"! (error: %s)",
+  "worldtools.log.error.not_capturing": "No capture is running yet!",
+  "worldtools.log.error.world_name_too_long": "World name \"%s\" is too long! (max %d characters)",
+  "worldtools.log.info.started_capture": "Started capturing %s...",
+  "worldtools.log.info.stopping_capture": "Stopping capture %s..."
 }
