Native text component rewrite dropping kyori

--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -29,22 +29,29 @@
   "text.autoconfig.worldtools.option.world.keepInventory": "Inventar behalten",
   "text.autoconfig.worldtools.option.world.modifyGameRules": "Spielregeln modifizieren",
   "text.autoconfig.worldtools.title": "WorldTools Konfiguration",
-  "worldtools.capture.and": "und",
-  "worldtools.capture.chunks": "Chunks",
-  "worldtools.capture.click_to_open": "Klicke zum Öffnen",
-  "worldtools.capture.containers": "Kontainer",
-  "worldtools.capture.entities": "Entitäten",
-  "worldtools.capture.in_dimensions": "in Dimension",
-  "worldtools.capture.in_directory": "im Verzeichnis",
-  "worldtools.capture.nothing_saved_yet": "Noch nichts gespeichert",
-  "worldtools.capture.players": "Spieler",
-  "worldtools.capture.saved": "Gespeichert:",
-  "worldtools.capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert.",
-  "worldtools.capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert.",
-  "worldtools.capture.saved.metadata": "Metadaten gespeichert.",
-  "worldtools.capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert.",
-  "worldtools.capture.saved.statistics": "Statistiken gespeichert.",
-  "worldtools.capture.took": "dauerte %s",
+  "worldtools.capture.and": " und ",
+  "worldtools.capture.chunk": "%s Chunk",
+  "worldtools.capture.chunks": "%s Chunks",
+  "worldtools.capture.click_to_open": "%s (Klicke zum Öffnen)",
+  "worldtools.capture.container": "%s Kontainer",
+  "worldtools.capture.containers": "%s Kontainer",
+  "worldtools.capture.entities": "%s Entitäten",
+  "worldtools.capture.entity": "%s Entität",
+  "worldtools.capture.in_dimension": " in Dimension ",
+  "worldtools.capture.nothing_saved_yet": "Noch nichts für %s gespeichert",
+  "worldtools.capture.player": "%s Spieler",
+  "worldtools.capture.players": "%s Spieler",
+  "worldtools.capture.saved": "Speicherte ",
+  "worldtools.capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert",
+  "worldtools.capture.saved.chunks.anonymized": "Chunk in Dimension %s gespeichert",
+  "worldtools.capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert",
+  "worldtools.capture.saved.entities.anonymized": "Entitäten %s in Dimension %s gespeichert",
+  "worldtools.capture.saved.metadata": "Metadaten von %s gespeichert",
+  "worldtools.capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert",
+  "worldtools.capture.saved.player.anonymized": "Spieler %s in Dimension %s gespeichert",
+  "worldtools.capture.saved.statistics": "Statistiken von %s gespeichert.",
+  "worldtools.capture.to_directory": " in das Verzeichnis ",
+  "worldtools.capture.took": " (in %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
   "worldtools.gui.escape.button.finish_download": "Aufzeichnung von %s speichern",
   "worldtools.gui.manager.button.cancel": "Abbrechen",
