--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -29,22 +29,29 @@
   "text.autoconfig.worldtools.option.world.keepInventory": "Keep Inventory",
   "text.autoconfig.worldtools.option.world.modifyGameRules": "Modify Game Rules",
   "text.autoconfig.worldtools.title": "WorldTools Config",
-  "worldtools.capture.and": "and",
-  "worldtools.capture.chunks": "chunks",
-  "worldtools.capture.click_to_open": "click to open",
-  "worldtools.capture.containers": "containers",
-  "worldtools.capture.entities": "entities",
-  "worldtools.capture.in_dimensions": "in dimension",
-  "worldtools.capture.in_directory": "to saves directory",
-  "worldtools.capture.nothing_saved_yet": "Nothing saved yet",
-  "worldtools.capture.players": "players",
-  "worldtools.capture.saved": "Saved",
+  "worldtools.capture.and": " and ",
+  "worldtools.capture.chunk": "%s chunk",
+  "worldtools.capture.chunks": "%s chunks",
+  "worldtools.capture.click_to_open": "%s (click to open)",
+  "worldtools.capture.container": "%s container",
+  "worldtools.capture.containers": "%s containers",
+  "worldtools.capture.entities": "%s entities",
+  "worldtools.capture.entity": "%s entity",
+  "worldtools.capture.in_dimension": " in dimension ",
+  "worldtools.capture.nothing_saved_yet": "Nothing saved yet for %s",
+  "worldtools.capture.player": "%s player",
+  "worldtools.capture.players": "%s players",
+  "worldtools.capture.saved": "Saved ",
   "worldtools.capture.saved.chunks": "Saved chunk at %s in dimension %s",
-  "worldtools.capture.saved.entities": "Saved entities %s in chunk %s in dimension %s",
-  "worldtools.capture.saved.metadata": "Saved metadata",
+  "worldtools.capture.saved.chunks.anonymized": "Saved chunk in dimension %s",
+  "worldtools.capture.saved.entities": "Saved %s in chunk %s in dimension %s",
+  "worldtools.capture.saved.entities.anonymized": "Saved %s in dimension %s",
+  "worldtools.capture.saved.metadata": "Saved metadata of %s",
   "worldtools.capture.saved.player": "Saved player %s at %s in dimension %s",
-  "worldtools.capture.saved.statistics": "Saved statistics",
-  "worldtools.capture.took": "took %s",
+  "worldtools.capture.saved.player.anonymized": "Saved player %s in dimension %s",
+  "worldtools.capture.saved.statistics": "Saved statistics of %s",
+  "worldtools.capture.to_directory": " to saves directory ",
+  "worldtools.capture.took": " (took %s)",
   "worldtools.gui.browser.title": "WorldTools Browser",
   "worldtools.gui.escape.button.finish_download": "Save capture of %s",
   "worldtools.gui.manager.button.cancel": "Cancel",
