--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -1,7 +1,13 @@
 {
   "text.autoconfig.worldtools.option.advanced": "Erweitert",
-  "text.autoconfig.worldtools.option.advanced.bossBarTimeout": "Boss Balken Anzeigedauer (ms)",
-  "text.autoconfig.worldtools.option.advanced.renderNotYetCachedContainers": "Rendere nicht gecachte Kontainer",
+  "text.autoconfig.worldtools.option.advanced.accentColor": "Aktzentfarbe (RGB Hex)",
+  "text.autoconfig.worldtools.option.advanced.anonymousMode": "Anonyme Koordinaten",
+  "text.autoconfig.worldtools.option.advanced.captureBarColor": "Aufzeichnungsbalkenfarbe (RGB Hex)",
+  "text.autoconfig.worldtools.option.advanced.captureBarStyle": "Aufzeichnungsbalkenstil",
+  "text.autoconfig.worldtools.option.advanced.progressBarColor": "Vortschrittsbalkenfarbe (RGB Hex)",
+  "text.autoconfig.worldtools.option.advanced.progressBarStyle": "Vortschrittsbalkenstil",
+  "text.autoconfig.worldtools.option.advanced.progressBarTimeout": "Vortschrittsbalken Anzeigedauer (ms)",
+  "text.autoconfig.worldtools.option.advanced.renderNotYetCachedContainers": "Rendere bisher nicht analysierte Kontainer",
   "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Nachrichten anzeigen",
   "text.autoconfig.worldtools.option.advanced.showToasts": "Info Toasts anzeigen",
   "text.autoconfig.worldtools.option.capture": "Aufnahme",
