--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -5,6 +5,7 @@
   "text.autoconfig.worldtools.option.advanced.autoDownload": "Automatically start download on join",
   "text.autoconfig.worldtools.option.advanced.captureBarColor": "Capture Info Bar Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.captureBarStyle": "Capture Info Bar Style",
+  "text.autoconfig.worldtools.option.advanced.containerColor": "Missing Container Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.progressBarColor": "Progress Bar Color (RGB Hex)",
   "text.autoconfig.worldtools.option.advanced.progressBarStyle": "Progress Bar Style",
   "text.autoconfig.worldtools.option.advanced.progressBarTimeout": "Progress Bar Timeout (ms)",
