Repackaged and improved coherence

--- a/common/src/main/resources/assets/worldtools/lang/de_de.json
+++ b/common/src/main/resources/assets/worldtools/lang/de_de.json
@@ -13,8 +13,10 @@
   "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Nachrichten anzeigen",
   "text.autoconfig.worldtools.option.advanced.showToasts": "Info Toasts anzeigen",
   "text.autoconfig.worldtools.option.capture": "Aufnahme",
+  "text.autoconfig.worldtools.option.capture.advancements": "Erfolge",
   "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
   "text.autoconfig.worldtools.option.capture.entities": "Entitäten",
+  "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
   "text.autoconfig.worldtools.option.capture.metadata": "Metadaten",
   "text.autoconfig.worldtools.option.capture.players": "Spieler",
   "text.autoconfig.worldtools.option.capture.statistics": "Statistiken",
@@ -50,10 +52,13 @@
   "worldtools.capture.player": "%s Spieler",
   "worldtools.capture.players": "%s Spieler",
   "worldtools.capture.saved": "Speicherte ",
+  "worldtools.capture.saved.advancements": "Erfolge des Spielers %s gespeichert",
   "worldtools.capture.saved.chunks": "Chunk bei %s in Dimension %s gespeichert",
   "worldtools.capture.saved.chunks.anonymized": "Chunk in Dimension %s gespeichert",
+  "worldtools.capture.saved.end_flow": "Aufnahme von %s beendet",
   "worldtools.capture.saved.entities": "Entitäten %s in Chunk %s in Dimension %s gespeichert",
   "worldtools.capture.saved.entities.anonymized": "Entitäten %s in Dimension %s gespeichert",
+  "worldtools.capture.saved.levelData": "%s für %s gespeichert.",
   "worldtools.capture.saved.metadata": "Metadaten von %s gespeichert",
   "worldtools.capture.saved.player": "Spieler %s bei %s in Dimension %s gespeichert",
   "worldtools.capture.saved.player.anonymized": "Spieler %s in Dimension %s gespeichert",
