--- a/common/src/main/resources/assets/worldtools/lang/en_us.json
+++ b/common/src/main/resources/assets/worldtools/lang/en_us.json
@@ -13,8 +13,10 @@
   "text.autoconfig.worldtools.option.advanced.showChatMessages": "Info Chat Messages",
   "text.autoconfig.worldtools.option.advanced.showToasts": "Display Toasts",
   "text.autoconfig.worldtools.option.capture": "Capture",
+  "text.autoconfig.worldtools.option.capture.advancements": "Advancements",
   "text.autoconfig.worldtools.option.capture.chunks": "Chunks",
   "text.autoconfig.worldtools.option.capture.entities": "Entities",
+  "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
   "text.autoconfig.worldtools.option.capture.metadata": "Metadata",
   "text.autoconfig.worldtools.option.capture.players": "Players",
   "text.autoconfig.worldtools.option.capture.statistics": "Statistics",
@@ -51,10 +53,13 @@
   "worldtools.capture.player": "%s player",
   "worldtools.capture.players": "%s players",
   "worldtools.capture.saved": "Saved ",
+  "worldtools.capture.saved.advancements": "Saved advancements of %s",
   "worldtools.capture.saved.chunks": "Saved chunk at %s in dimension %s",
   "worldtools.capture.saved.chunks.anonymized": "Saved chunk in dimension %s",
+  "worldtools.capture.saved.end_flow": "Finished capture of %s",
   "worldtools.capture.saved.entities": "Saved %s in chunk %s in dimension %s",
   "worldtools.capture.saved.entities.anonymized": "Saved %s in dimension %s",
+  "worldtools.capture.saved.levelData": "Saved %s of %s",
   "worldtools.capture.saved.metadata": "Saved metadata of %s",
   "worldtools.capture.saved.player": "Saved player %s at %s in dimension %s",
   "worldtools.capture.saved.player.anonymized": "Saved player %s in dimension %s",
