--- a/common/src/main/resources/assets/worldtools/lang/ja_jp.json
+++ b/common/src/main/resources/assets/worldtools/lang/ja_jp.json
@@ -13,8 +13,10 @@
   "text.autoconfig.worldtools.option.advanced.showChatMessages": "情報チャットメッセージ",
   "text.autoconfig.worldtools.option.advanced.showToasts": "トーストを表示",
   "text.autoconfig.worldtools.option.capture": "キャプチャ",
+  "text.autoconfig.worldtools.option.capture.advancements": "進行中",
   "text.autoconfig.worldtools.option.capture.chunks": "チャンク",
   "text.autoconfig.worldtools.option.capture.entities": "エンティティ",
+  "text.autoconfig.worldtools.option.capture.levelData": "Level.dat",
   "text.autoconfig.worldtools.option.capture.metadata": "メタデータ",
   "text.autoconfig.worldtools.option.capture.players": "プレイヤー",
   "text.autoconfig.worldtools.option.capture.statistics": "統計",
@@ -50,10 +52,13 @@
   "worldtools.capture.player": "%s プレイヤー",
   "worldtools.capture.players": "%s プレイヤー",
   "worldtools.capture.saved": "保存された ",
+  "worldtools.capture.saved.advancements": "%s の進行状況を保存しました",
   "worldtools.capture.saved.chunks": "次元 %s の %s にチャンクを保存しました",
   "worldtools.capture.saved.chunks.anonymized": "次元 %s のチャンクを保存しました",
+  "worldtools.capture.saved.end_flow": "%s のキャプチャを終了しました",
   "worldtools.capture.saved.entities": "次元 %s のチャンク %s に %s を保存しました",
   "worldtools.capture.saved.entities.anonymized": "次元 %s に %s を保存しました",
+  "worldtools.capture.saved.levelData": "%s の %s を保存しました",
   "worldtools.capture.saved.metadata": "%s のメタデータを保存しました",
   "worldtools.capture.saved.player": "次元 %s の %s にプレイヤー %s を保存しました",
   "worldtools.capture.saved.player.anonymized": "次元 %s のプレイヤー %s を保存しました",
